# rustboard

./: .gitignore  Cargo.toml  tauri.conf.json  tauri.conf.json.old
src/: load_audio.rs  main.rs  pw_helper.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  pw_helper.rs
templates/: index.html
ui/: index.html
