[package]
name = "rustboard"
version = "0.1.0"
description = "rustboard"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
libspa-sys = "0.8.0"
pipewire = "0.8.0"
rodio = { version="0.19.0", features = ["symphonia-all"] }
actix-web = "4.3.1"
env_logger = "0.10.2"
